adding all changes

--- a/Star-VoteAPI/Star-VoteAPI/appsettings.json
+++ b/Star-VoteAPI/Star-VoteAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionString": {
+    "ShowsDB": "server=starvoterdbserver.database.windows.net;database=shows;User ID=devaddict;password=Letmefly1;"
+  },
   "AllowedHosts": "*"
 }
